--- a/module3-sol/index.html
+++ b/module3-sol/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,7 +18,7 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
 <body>
-
+<?php include('index.php') ?>
   <header>
     <nav id="header-nav" class="navbar navbar-default">
       <div class="container">
