--- a/module3-sol/index.html
+++ b/module3-sol/index.html
@@ -19,7 +19,7 @@
   </head>
 <body>
 <?php include('index.php') ?>
-  <header>
+ <!-- <header>
     <nav id="header-nav" class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
@@ -83,6 +83,6 @@
 
   <script src="js/jquery-1.11.3.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
-  <script src="js/script.js"></script>
+  <script src="js/script.js"></script> -->
 </body>
 </html>
