--- a/module3-sol/index.html
+++ b/module3-sol/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
 <body>
-<?php include 'index.php' ; ?>
+<?php include 'test.php' ; ?>
  <!-- <header>
     <nav id="header-nav" class="navbar navbar-default">
       <div class="container">
